--- a/index.html
+++ b/index.html
@@ -3,24 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Landing Page</title>
 </head>
 <body>
     <div class="header">
-    <img href="" for="">
+    <div class="logo">Header Logo</div>
     <div class="header-link">
-        <li>
-        <ul>Header-link-1</ul>
-        <ul>Header-link-2</ul>
-        <ul>Header-link-3</ul>
-        </li>
+        <ul>
+        <li>Header-link-1</li>
+        <li>Header-link-2</li>
+        <li>Header-link-3</li>
+        </ul>
     </div>
     </div>
     <div class="info">
-        <div>Website</div>
-        <div>Description</div>
-        <button>Sign up</button>
-        <img href="" for="">
+        <div class="text-info">
+            <div class="big-info">This website is awesome!!!</div>
+        <div class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at molestie dui. Ut congue bibendum urna non sodales. Proin hendrerit dignissim volutpat. Vestibulum quam magna, semper in sapien</div>
+        <button class="info-button">Sign up</button>
+        </div>
+        <img src="233-2332677_ega-png.png" alt="placeholder for image">
     </div>
     <div class="more-info">
         <div>More-info</div>
