finish added some classes

--- a/index.html
+++ b/index.html
@@ -25,25 +25,39 @@
         </div>
         <img src="233-2332677_ega-png.png" alt="placeholder for image">
     </div>
-    <div class="more-info">
-        <div>More-info</div>
-        <img href="" for="">
-        <div>Description of picture</div>
-        <img href="" for="">
-        <div>Description of picture</div>
-        <img href="" for="">
-        <div>Description of picture</div>
-        <img href="" for="">
-        <div>Description of picture</div>
+        <div class="more-info-header">More-info</div>
+        <div class="more-info">
+        <div class="more-info-picture-text">
+        <img class="more-info-picture" href="" for="">
+        <div class="more-info-text">Description of picture</div>
     </div>
-    <div class="quote">
-        <div>Quote here</div>
-        <div>The one who said it</div>
+        <div class="more-info-picture-text">
+        <img class="more-info-picture" href="" for="">
+        <div class="more-info-text">Description of picture</div>
     </div>
-    <div class="Sign-up">
-        <div>Attention grabber</div>
-        <div>Description</div>
-        <button>Sign-up</button>
+        <div class="more-info-picture-text">
+        <img class="more-info-picture" href="" for="">
+        <div class="more-info-text">Description of picture</div>
+    </div>
+        <div class="more-info-picture-text">
+        <img class="more-info-picture" href="" for="">
+        <div class="more-info-text">Description of picture</div>
+    </div>
+    </div>
+    <div class="quote-section">
+        <div class="quote">
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at molestie dui. Ut congue bibendum urna non sodales. Proin hendrerit dignissim volutpat. Vestibulum quam magna, semper in sapien</div>
+        </div>
+        <div class="quote-sayer">
+        <div>-The one who said it</div>
+        </div>
+    </div>
+    <div class="sign-up">
+        <div>
+        <div class="sign-up-header">Attention grabber</div>
+        <div class="sign-up-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus at molestie dui.  Ut congue bibendum urna non sodales. Proin hendrerit dignissim volutpat. Vestibulum quam magna, semper in sapien</div>
+        </div>
+        <button class="sign-up-button">Sign-up</button>
     </div>
     <div class="copyrigth">
         <div>copyrigth</div>
